--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,18 +127,17 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
+    <% if @items.present? %>
      <% @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
+           <% if item.order %>
+            <div class='sold-out'>
+             <span>Sold Out!!</span>
+            </div>
+           <% end %>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
@@ -155,6 +154,7 @@
         <% end %>
       </li>
      <% end %>
+    <% end %>
      <% if @items.blank? %>
       <li class='list'>
         <%= link_to '#' do %>
